2010-10-03 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Initial release
