@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array (
 	'description' => 'Useful informations in the reports module : list of xclass, cliKeys, eID, used content type, used plugins... It can really help you during migration or new existing project (to have a global reports of the system).',
 	'category' => 'misc',
 	'shy' => 0,
-	'version' => '2.0.0',
+	'version' => '2.0.1',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
