@@ -1,3 +1,7 @@
+2010-10-05 CERDAN Yohann <cerdanyohann@yahoo.fr>
+	* Update the locallang
+	* Update the manual
+	* Add a new option 'Summary' in the 'plugins & content type' module
 2010-10-03 CERDAN Yohann <cerdanyohann@yahoo.fr>
 	* Initial release
 
